# gemini-playroom-diet

./: DEPLOYMENT.md  Makefile  README.md
airflow/: .env.dist  README.md  requirements.txt
airflow/.devcontainer/: devcontainer.json
airflow/dags/: playroom_diet.py
airflow/include/: onet.py
backend/: .env.dist  .gitignore  README.md  airflow.py  cleanup.py  main.py  pyproject.toml  requirements.txt
frontend/: .env  .firebaserc  .gitignore  README.md  firebase.json  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js  router.js  style.css
frontend/src/components/: About.vue  Home.vue  PlayroomScene.vue  ScanResult.vue  ShareCard.vue  SkillRadar.vue  SystemOverview.vue
frontend/src/composables/: useImageCompressor.js  useToast.js
